--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.27)
 project(vector-class CXX)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vector.h)
+add_library(vector-class INTERFACE)
+
+target_include_directories(vector-class INTERFACE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include>
+)
